manifests/hello-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  namespace: hello
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
